--- a/per_order_update/per_order_update.csproj
+++ b/per_order_update/per_order_update.csproj
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -33,21 +34,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Basic">
-      <HintPath>..\DBVM_CHGH_API\0.DLL\Basic.dll</HintPath>
+    <Reference Include="Basic, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\0.DLL\Basic.dll</HintPath>
     </Reference>
-    <Reference Include="dBASE.NET">
-      <HintPath>..\DBVM_CHGH_API\0.DLL\dBASE.NET.dll</HintPath>
-    </Reference>
-    <Reference Include="HIS_DB_Lib">
-      <HintPath>..\DBVM_CHGH_API\0.DLL\HIS_DB_Lib.dll</HintPath>
+    <Reference Include="HIS_DB_Lib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\0.DLL\HIS_DB_Lib.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Data, Version=6.8.3.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\0.DLL\MySql.Data.dll</HintPath>
     </Reference>
-    <Reference Include="SQLUI">
-      <HintPath>..\DBVM_CHGH_API\0.DLL\SQLUI.dll</HintPath>
+    <Reference Include="SQLUI, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\0.DLL\SQLUI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
